	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

	* fix for set_piece_deadline
	* add reset_piece_deadline function
	* fix merkle tree torrent assert

0.15.67 release

	* exposed set_peer_id to python binding
	* improve support for merkle tree torrent creation
	* exposed comparison operators on torrent_handle to python
	* exposed alert error_codes to python
	* fixed bug in announce_entry::next_announce_in and min_announce_in
	* fixed sign issue in set_alert_mask signature
	* fixed unaligned disk access for unbuffered I/O in windows
	* support torrents whose name is empty
	* fixed connection limit to take web seeds into account as well
	* fixed bug when receiving a have message before having the metadata
	* fixed python bindings build with disabled DHT support
	* fixed BSD file allocation issue
	* fixed bug in session::delete_files option to remove_torrent

0.15.6 release

	* fixed crash in udp trackers when using SOCKS5 proxy
	* fixed reconnect delay when leaving upload only mode
	* fixed default values being set incorrectly in add_torrent_params through add_magnet_uri in python bindings
	* implemented unaligned write (for unbuffered I/O)
	* fixed broadcast_lsd option
	* fixed udp-socket race condition when using a proxy
	* end-game mode optimizations
	* fixed bug in udp_socket causing it to issue two simultaneous async. read operations
	* fixed mingw build
	* fixed minor bug in metadata block requester (for magnet links)
	* fixed race condition in iconv string converter
	* fixed error handling in torrent_info constructor
	* fixed bug in torrent_info::remap_files
	* fix python binding for wait_for_alert